# abcd

./: README.md  pyproject.toml
abcd/: __init__.py  dataquery.py  plot.py
notebooks/: demo.ipynb  tools.py
